force-app/main/default/objects/Survey_Score__c/Survey_Score__c.object-meta.xml
<CustomObject>
    <label>Survey Score</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Score</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>