force-app/main/default/objects/Survey_Score__c/fields/Hight_score_range__c.field-meta.xml
<CustomField>
    <fullName>Hight_score_range__c</fullName>
    <label>Hight score range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>