force-app/main/default/objects/Survey_Score__c/fields/Low_score_range__c.field-meta.xml
<CustomField>
    <fullName>Low_score_range__c</fullName>
    <label>Low score range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>