force-app/main/default/objects/Survey_Score__c/fields/Score_Group__c.field-meta.xml
<CustomField>
    <fullName>Score_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Score Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>