force-app/main/default/objects/Survey_Score__c/fields/Survey_Manager__c.field-meta.xml
<CustomField>
    <fullName>Survey_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Manager</label>
    <referenceTo>Survey_Manager__c</referenceTo>
    <relationshipName>Survey_Score_Rank</relationshipName>
    <type>Lookup</type>
</CustomField>